# xtp-couchbase-demo

./: go.mod  go.sum  m_test.go  main_test.go
wasm/01_emit/: go.mod_  main.go  pdk.gen.go  xtp.toml
wasm/jq/: Cargo.toml  xtp.toml
wasm/jq/src/: lib.rs  pdk.rs
